Fixed scrolling issues on Safari Mobile

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -6,10 +6,12 @@
 
 html {
     scroll-snap-type: y mandatory;
+    
 }
 
 body {
-    overscroll-behavior-y: none;
+    scroll-snap-type: y mandatory;
+    overscroll-behavior-y: touch;
     text-transform: lowercase;
     background-color: var(--color-background);
     color: var(--color-text);
