--- a/src/styles/sections/_work.scss
+++ b/src/styles/sections/_work.scss
@@ -6,6 +6,7 @@
     height: 100vh;
     width: 100%;
     scroll-snap-align: start;
+    -webkit-scroll-snap-align: start;
     z-index: 2;
 }
 
